# CausalTestingFramework

./: .gitignore  .mega-linter.yaml  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  CITATION.cff  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  citation.cff  conf.py  docker_entrypoint.sh  paper.bib  paper.md  pyproject.toml  requirements.txt  setup.py  width_num_shapes_results_random_1000.csv
.github/: CONTRIBUTING.md
.github/workflows/: ci-tests-drafts.yaml  ci-tests.yaml  figshare.yaml  joss.yaml  lint-format.yaml  publish-to-dafni.yaml  publish-to-pypi.yaml  publish-to-test-pypi.yaml
causal_testing/: __init__.py  __main__.py  causal_inference.py  causal_testing_framework.py  fail.py  json_frontend.py  main.py  pyflakes.sh  requirements.txt
causal_testing/data_collection/: README.md  data_collector.py  experimental_data_collector.py  observational.py  observational_data_collector.py
causal_testing/discovery/: abstract_discovery.py  hill_climber.py  hill_climber_discovery.py  nsga_discovery.py
causal_testing/estimation/: abstract_estimator.py  abstract_regression_estimator.py  cubic_spline_estimator.py  effect_estimate.py  estimator.py  experimental_estimator.py  genetic_programming_regression_fitter.py  gp.py  instrumental_variable_estimator.py  ipcw_estimator.py  iv_estimator.py  linear_regression_estimator.py  logistic_regression_estimator.py  multinomial_regression_estimator.py  regression_estimator.py
causal_testing/generation/: abstract_causal_test_case.py  enum_gen.py
causal_testing/json_front/: README.md  json_class.py
causal_testing/specification/: README.md  capabilities.py  causal_dag.py  causal_specification.py  constraint.py  metamorphic_relation.py  optimised_causal_dag.py  properties.py  scenario.py  variable.py
causal_testing/surrogate/: causal_surrogate_assisted.py  surrogate_search_algorithms.py
causal_testing/testing/: README.md  __init__.py  abstract_causal_test_case.py  base_causal_test.py  base_test_case.py  causal_effect.py  causal_surrogate_assisted.py  causal_test_adequacy.py  causal_test_case.py  causal_test_engine.py  causal_test_outcome.py  causal_test_result.py  causal_test_suite.py  dag_adequacy.py  data_adequacy.py  effect.py  estimators.py  intervention.py  metamorphic_relation.py  surrogate_search_algorithms.py  validation.py
causal_testing/utils/: validation.py
dafni/: .dockerignore  .env  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  main_dafni.py  model_definition.yaml
dafni/data/inputs/: causal_tests.json  dag.dot  runtime_data.csv  variables.json
dafni/data/outputs/: causal_test_results.json  causal_tests_results.json
dafni/src/: main_dafni.py
dafni/tests/: test_main_dafni.py  tests_main_dafni.py
docs/: README.md
docs/source/: background.rst  causal_testing.data_collection.rst  causal_testing.generation.rst  causal_testing.rst  causal_testing.specification.rst  causal_testing.testing.rst  conf.py  credits.rst  description.rst  glossary.md  glossary.rst  index.rst  installation.rst  json_front_end.rst  requirements.txt  tutorials.rst  usage.rst
docs/source/dev/: actions_and_webhooks.rst  documentation.rst  version_release.rst
docs/source/frontends/: json_front_end.rst  test_suite.rst
docs/source/modules/: causal_specification.rst  causal_testing.rst  causal_tests.rst  custom_estimators.rst  data_collector.rst  discovery.rst  estimators.rst
examples/: .gitignore
examples/apsdigitaltwin/: .env  apsdigitaltwin.py  dag.dot
examples/apsdigitaltwin/util/: model.py
examples/covasim_/: README.md  causal_test_beta.py  causal_test_vaccine.py  dag.dot  observational_data.csv
examples/covasim_/data/: 10k_observational_data.csv
examples/covasim_/doubling_beta/: README.md  causal_test_beta.py  dag.dot  doubling_beta.py.ipynb  example_beta.py  test_beta.py
examples/covasim_/vaccinating_elderly/: README.md  causal_test_vaccine.py  (+2 more)
examples/lr91/: README.md  causal_test_Gk.py  causal_test_max_conductances.py  causal_test_max_conductances_test_suite.py  dag.dot  example_max_conductances.py  example_max_conductances_test_suite.py
examples/poisson/: README.md  causal_test_setup.py  causal_tests.json  data.csv  example_run_causal_tests.py  run_causal_tests.py  test_run_causal_tests.py
examples/poisson-line-process/: .gitignore  README.md  causal_test_poisson.py  causal_tests.json  dag.dot  example_json_frontend.py  example_poisson_process.py  example_pure_python.py  intensity_num_shapes_results_random_1000.csv  poisson_line_process.ipynb  test_poisson_process.py  tests.py  width_num_shapes_results_random_1000.csv
images/: .gitignore  brain.tex  schematic.tex  workflow.tex
json_frontend/: README.md  causal_test_setup.py  causal_tests.json  process_causal_tests_json.py
paper/: paper.bib  paper.md
tests/: test_helpers.py  test_init.py
tests/data/: temporal_data.csv
tests/data_collection_tests/: test_observational_data_collector.py
tests/discovery_tests/: test_abstract_discovery.py  test_hill_climber.py  test_hill_climber_discovery.py  test_nsga_discovery.py
tests/estimation_tests/: test_cubic_spline_estimator.py  test_experimental_estimator.py  test_genetic_programming_regression_fitter.py  test_gp.py  test_instrumental_variable_estimator.py  test_ipcw_estimator.py  test_iv_estimator.py  test_linear_regression_estimator.py  test_logistic_regression_estimator.py  test_multinomial_regression_estimator.py
tests/generation_tests/: test_abstract_test_case.py
tests/json_front_tests/: test_json_class.py
tests/main_tests/: test_ctf.py  test_main.py
tests/specification_tests/: test_capabilities.py  test_causal_dag.py  test_metamorphic_relations.py  test_variable.py
tests/surrogate_tests/: test_causal_surrogate_assisted.py
tests/test_dependencies/: test_dependencies.py
tests/testing_tests/: test_causal_effect.py  test_causal_test_adequacy.py  test_causal_test_case.py  test_causal_test_engine.py  test_causal_test_outcome.py  test_causal_test_suite.py  test_estimators.py  test_intervention.py  test_metamorphic_relations.py
tests/tutorial_tests/: test_tutorials.py
(+53 files in other folders)
