[build-system]
requires = [
    "setuptools>=64",
    "setuptools_scm[toml]>=6.2",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "causal_testing_framework"
authors = [{ name = "The CITCOM team" }]
description = "A framework for causal testing using causal directed acyclic graphs."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["causal inference", "verification"]
dependencies = [
    "z3_solver~=4.11.2", # z3_solver does not follow semantic versioning and tying to 4.11 introduces problems
    "fitter~=1.7",
    "lifelines~=0.29.0",
    "lhsmdu~=1.1",
    "networkx~=2.6",
    "numpy~=1.26",
    "pandas>=2.1",
    "scikit_learn~=1.4",
    "scipy~=1.7",
    "statsmodels~=0.14",
    "tabulate~=0.9",
    "pydot~=2.0",
    "pygad~=3.3",
    "deap~=1.4.1",
    "sympy~=1.13.1",
    "deap~=1.4.1",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "autopep8",
    "isort",
    "pytest",
    "pylint",
    "black",
    "autoapi",
    "myst-parser",
    "sphinx-autoapi",
    "sphinx_rtd_theme",
]
test = [
  "covasim~=3.0.7",
]

[project.urls]
Bug_Tracker = "https://github.com/CITCOM-project/CausalTestingFramework/issues"
Documentation = "https://causal-testing-framework.readthedocs.io/"
Source = "https://github.com/CITCOM-project/CausalTestingFramework"

[tool.setuptools.packages]
find = { }

[tool.setuptools_scm]

[tool.black]
# https://github.com/psf/black
line-length = 120
target-version = ["py39"]

[tool.autopep8]
max_line_length = 120
in-place = true
recursive = true
aggressive = 3

[tool.pytest.ini_options]
minversion = "6.0"
python_files=[
    "test_*.py",
    "example_*.py"]
